tests/data/placebo/test_sg_config_ingres_diff/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "Tags": [
          {
            "Value": "Private",
            "Key": "NetworkLocation"
          }
        ],
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-aa6c90c3"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-5f6c9936",
        "OwnerId": "644160558196",
        "GroupId": "sg-aa6c90c3"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Test",
        "Tags": [
          {
            "Value": "Test",
            "Key": "Name"
          }
        ],
        "IpPermissions": [],
        "GroupName": "Test",
        "VpcId": "vpc-5f6c9936",
        "OwnerId": "644160558196",
        "GroupId": "sg-65229a0c"
      }
    ],
    "ResponseMetadata": {}
  }
}
